--- a/CollegeManager/CollegeManager.csproj
+++ b/CollegeManager/CollegeManager.csproj
@@ -239,6 +239,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Sql_Scripts\" />
     <Folder Include="Views\Course\" />
   </ItemGroup>
   <ItemGroup>
