--- a/CollegeManager/Web.config
+++ b/CollegeManager/Web.config
@@ -59,6 +59,7 @@
   <connectionStrings>
     <add name="CollegeManagerEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-SEM215B;initial catalog=CollegeManager;integrated security=True;pooling=False;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="CollegeEntities" connectionString="metadata=res://*/Models.Context.csdl|res://*/Models.Context.ssdl|res://*/Models.Context.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-SEM215B;initial catalog=CollegeManager;integrated security=True;pooling=False;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Entities" connectionString="metadata=res://*/Models.Model.csdl|res://*/Models.Model.ssdl|res://*/Models.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-SEM215B;initial catalog=CollegeManager;integrated security=True;pooling=False;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
